add do novo projeto na pagina de projetos

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -209,7 +209,7 @@
                     <img src="components/img/projetos/printHDCEventos.jpg" alt="print_HDC_eventos">
                     <div class="card-footer">
                         <button class="btn btn-primary btn-sm mt-3" data-bs-toggle="modal" data-bs-target="#HDCEVentos">
-                            <span class="fas fa-plus"></span> Ver Mais
+                            <span class="fas fa-expand"></span> Ver Mais
                         </button>
                     </div>
                     <!-- Modal -->
@@ -291,6 +291,88 @@
                                             class="card-img mx-auto" alt="icone_github"> Repositório: <a
                                             class="card-link"
                                             href="https://github.com/Jana-SI/Curso-de-Laravel_HDC-Eventos">clique
+                                            aqui</a>
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title">🇧🇷 Calendário mensal por estado 🇧🇷</h5>
+                    </div>
+                    <img src="components/img/projetos/Screenshot_Calendario_mensal_por_estado.png"
+                        alt="print_Calendario_mensal_por_estado">
+                    <div class="card-footer">
+                        <button class="btn btn-primary btn-sm mt-3" data-bs-toggle="modal"
+                            data-bs-target="#CalendarioMensalEstado">
+                            <span class="fas fa-expand"></span> Ver Mais
+                        </button>
+                    </div>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="CalendarioMensalEstado" tabindex="-1"
+                        aria-labelledby="CalendarioMensalEstadoLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="CalendarioMensalEstadoLabel">🇧🇷 Calendário mensal por
+                                        estado 🇧🇷</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <img src="/components/img/projetos/Screenshot_Calendario_mensal_por_estado.png"
+                                        alt="print_Calendario_mensal_por_estado" class="card-img">
+                                    <div class="card-body">
+                                        <p class="card-text">Projeto web de um calendário mensal por estados brasileiros.
+                                        </p>
+
+                                        <h5 class="card-title">Seções</h5>
+
+                                        <p class="card-text text-left">O site é composto por uma seção:</p>
+
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item">🏠 Home:
+                                                <ul class="list-group list-group-flush">
+                                                    <li class="list-group-item">Select 1 de estados utilizando API de
+                                                        estados do IBGE;</li>
+                                                    <li class="list-group-item">Select 2 de meses utilizando JavaScript;
+                                                    </li>
+                                                    <li class="list-group-item">Após selecionar estado e mês, exibe-se um
+                                                        calendário e uma lista, com feriados nacionais utilizando a API
+                                                        Nager
+                                                        Date e estaduais por estado selecionado, estações do ano, fases da
+                                                        lua,
+                                                        utilizando JSON;</li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+
+
+                                        <p class="card-text">Tecnologias utilizadas neste site:</p>
+
+                                        <div class="text-center">
+                                            <img
+                                                src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" />
+                                            <img
+                                                src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" />
+                                            <img
+                                                src="https://img.shields.io/badge/Bootstrap-563D7C?style=for-the-badge&logo=bootstrap&logoColor=white" />
+                                            <img
+                                                src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <h6 class="card-subtitle">
+                                        <img id="img_width_height" src="components/img/habilidades/github.png"
+                                            class="card-img mx-auto" alt="icone_github"> Repositório: <a class="card-link"
+                                            href="https://github.com/Jana-SI/Calendario">clique
                                             aqui</a>
                                     </h6>
                                 </div>
