--- a/index.html
+++ b/index.html
@@ -1,76 +1,138 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-
+  <head>
     <!--icon-->
-    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
     <!-- icon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <script src="https://kit.fontawesome.com/34fd4b8681.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/34fd4b8681.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <!-- styles -->
-    <link rel="stylesheet" type="text/css" href="components/styles/indexStyles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="components/styles/menuStyles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="components/styles/footerStyles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="components/styles/sobreStyles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="components/styles/habilidadesStyles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="components/styles/projetosStyles.css" media="screen" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="components/styles/indexStyles.css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="components/styles/menuStyles.css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="components/styles/footerStyles.css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="components/styles/sobreStyles.css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="components/styles/habilidadesStyles.css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="components/styles/projetosStyles.css"
+      media="screen"
+    />
 
-    <link rel="shortcut icon" href="#">
-</head>
+    <link rel="shortcut icon" href="#" />
+  </head>
 
-<body>
+  <body>
     <header id="menu">
-        <nav>
-            <img id="imgMenu" src="components/img/img_menu.png" alt="img_menu" />
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                    <a class="ativado" href="pages/home.html" id="tooltipHome" title="Home">
-                        <span class="icon"><i class="bi bi-house-heart"></i></span>
-                        <span class="text">Home</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="pages/sobre.html" id="tooltipSobre" title="Sobre mim">
-                        <span class="icon"><i class="bi bi-person-circle"></i></span>
-                        <span class="text">Sobre</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="pages/habilidades.html" id="tooltipHabilidades" title="Habilidades">
-                        <span class="icon"><i class="bi bi-person-lines-fill"></i></span>
-                        <span class="text">Habilidades</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="pages/projetos.html" id="tooltipProjetos" title="Projetos">
-                        <span class="icon"><i class="bi bi-person-gear"></i></span>
-                        <span class="text">Projetos</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <img id="imgMenu" src="components/img/img_menu.png" alt="img_menu" />
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a
+              class="ativado"
+              href="pages/home.html"
+              id="tooltipHome"
+              title="Home"
+            >
+              <span class="icon"><i class="bi bi-house-heart"></i></span>
+              <span class="text">Home</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="pages/sobre.html" id="tooltipSobre" title="Sobre mim">
+              <span class="icon"><i class="bi bi-person-circle"></i></span>
+              <span class="text">Sobre</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="pages/habilidades.html"
+              id="tooltipHabilidades"
+              title="Habilidades"
+            >
+              <span class="icon"><i class="bi bi-person-lines-fill"></i></span>
+              <span class="text">Habilidades</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="pages/projetos.html" id="tooltipProjetos" title="Projetos">
+              <span class="icon"><i class="bi bi-person-gear"></i></span>
+              <span class="text">Projetos</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="container-fluid">
-        <div id="content" class="row justify-content-center align-items-center">
-        </div>
+      <div
+        id="content"
+        class="row justify-content-center align-items-center"
+      ></div>
     </div>
     <!-- Bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Jquery -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+    ></script>
 
     <!-- Script -->
-    <script type="text/javascript" src="components/scripts/CarregamentoPagesMenu.js"></script>
-</body>
-
+    <script
+      type="text/javascript"
+      src="components/scripts/CarregamentoPagesMenu.js"
+    ></script>
+  </body>
 </html>
